@@ -25,4 +25,4 @@ network Test
 %exitcode: 1
 
 %contains: stdout
-cannot redeclare gate `out'
+redeclaration of gate `out'
