@@ -51,22 +51,10 @@ network Test
 module Test: Test {
     parameters:
         @isNetwork
-        aType = "Simple"
+        aType = "Module"
     submodules:
-        module Test.a: Simple {
+        module Test.a: Module {
             parameters:
-                p0 = "Hello"
-                p1 = 1
-                p2 = 2
-            gates:
-                 0 in: <-- b.out
-                 1 out: --> b.in
-                 2 g$i: <-- b.g$o
-                 3 g$o: --> b.g$i
-        }
-        module Test.b: Simple {
-            parameters:
-                p0 = "Hello"
                 p1 = 1
                 p2 = 2
             gates:
@@ -76,4 +64,3 @@ module Test: Test {
                  3 g$o: --> a.g$i
         }
 }
-
